force-app/main/default/objects/HealthCloudGA__EhrCarePlanParticipant__c/fields/HealthCloudGA__RoleCode__c.field-meta.xml
<CustomField>
    <fullName>HealthCloudGA__RoleCode__c</fullName>
    <description>Symbol in syntax defined by the system</description>
    <label>Role Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>