force-app/main/default/objects/HealthCloudGA__EhrCarePlanParticipant__c/fields/HealthCloudGA__RoleLabel__c.field-meta.xml
<CustomField>
    <fullName>HealthCloudGA__RoleLabel__c</fullName>
    <description>Friendly name for role</description>
    <label>Role Label</label>
    <length>255</length>
    <type>Text</type>
</CustomField>